--- a/operator_precedence.ipynb
+++ b/operator_precedence.ipynb
@@ -161,9 +161,9 @@
     "`((not 1) and (3 - (3 ** 0)))`  \n",
     "= `((False and (3 - 1))`  \n",
     "= `(False and 2)`  \n",
-    "= `2`\n",
+    "= `False`\n",
     "\n",
-    "ということで、条件は`True`となる。よって、`c`にあたる`(4 or (4 % 2))`が選ばれる。  \n",
+    "ということで、条件は`False`となる。よって、`c`にあたる`(4 or (4 % 2))`が選ばれる。  \n",
     "そして\n",
     "\n",
     "`(4 or (4 % 2))`  \n",
