--- a/class.ipynb
+++ b/class.ipynb
@@ -188,6 +188,91 @@
    "source": [
     "`type`だね。`type`が関数ではなくクラスであることがわかる。"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## `class`\n",
+    "\n",
+    "新たな型の定義。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class '__main__.A'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "class A:\n",
+    "    pass\n",
+    "\n",
+    "a = A()\n",
+    "print(type(a))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`モジュール名.クラス名`が得られる。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'__main__'"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "__name__"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`type`を使ってクラスを定義することもできる。\n",
+    "\n",
+    "`type(\"class_name\", (object,), {\"method_name\": method})`とすると、`object`を継承した`class_name`という名前のクラスが定義される。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello World!\n"
+     ]
+    }
+   ],
+   "source": [
+    "MyClass = type(\"MyClass\", (), {\"__call__\": lambda self: print(\"Hello World!\")})\n",
+    "my_instance = MyClass()\n",
+    "my_instance()"
+   ]
   }
  ],
  "metadata": {
