--- a/class.ipynb
+++ b/class.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# class"
+    "# class\n",
+    "\n",
+    "Pythonの型について学ぼう。"
    ]
   },
   {
@@ -272,6 +274,163 @@
     "MyClass = type(\"MyClass\", (), {\"__call__\": lambda self: print(\"Hello World!\")})\n",
     "my_instance = MyClass()\n",
     "my_instance()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`class Name(object):`というのは、内部で`type(\"Name\", (object,), {})`が呼ばれているということ。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## メタクラス\n",
+    "\n",
+    "インスタンスがクラスとなるようなクラス。`type`はメタクラスの一つ。\n",
+    "\n",
+    "参考: [Pythonのクラスとメタクラスまとめ](https://astropengu.in/posts/32/)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "例として、キャメルケースでメソッド名を定義してもスネークケースに直してくれるメタクラスを定義してみる。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import re\n",
+    "def camel_to_snake(name):\n",
+    "    return re.sub(r'(?<!^)(?=[A-Z])', '_', name).lower()\n",
+    "\n",
+    "class MyMeta(type):\n",
+    "    def __new__(cls, name, bases, dict):\n",
+    "        new_dict = {camel_to_snake(k): v for k, v in dict.items()}\n",
+    "        return super().__new__(cls, name, bases, new_dict)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "これでクラスを定義してみると"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello World!\n",
+      "'my_class' object has no attribute 'MyMethod'\n"
+     ]
+    }
+   ],
+   "source": [
+    "MyClass = MyMeta(\"my_class\", (), {\"MyMethod\": lambda self: print(\"Hello World!\")})\n",
+    "my_instance = MyClass()\n",
+    "\n",
+    "try:\n",
+    "    my_instance.my_method()\n",
+    "except Exception as e:\n",
+    "    print(e)\n",
+    "\n",
+    "try:\n",
+    "    my_instance.MyMethod()\n",
+    "except Exception as e:\n",
+    "    print(e)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`MyMethod`とキャメルケースでメソッド名を指定したが、`my_method`とスネークケースに直されている。  \n",
+    "`MyMethod`というメソッドを呼び出すとエラーになる。\n",
+    "\n",
+    "なお、デフォルトのメタクラス`type`を使うと"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "'my_class' object has no attribute 'my_method'\n",
+      "Hello World!\n"
+     ]
+    }
+   ],
+   "source": [
+    "MyClass = type(\"my_class\", (), {\"MyMethod\": lambda self: print(\"Hello World!\")})\n",
+    "my_instance = MyClass()\n",
+    "\n",
+    "try:\n",
+    "    my_instance.my_method()\n",
+    "except Exception as e:\n",
+    "    print(e)\n",
+    "\n",
+    "try:\n",
+    "    my_instance.MyMethod()\n",
+    "except Exception as e:\n",
+    "    print(e)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "と、入力した`MyMethod`のままになる。\n",
+    "\n",
+    "`class Name(object):`の形でクラスを定義する際に任意のメタクラスを指定する場合は、`class Name(object, metaclass=Meta):`とする。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello World!\n",
+      "'my_class' object has no attribute 'MyMethod'\n"
+     ]
+    }
+   ],
+   "source": [
+    "class my_class(metaclass=MyMeta):\n",
+    "    def MyMethod(self):\n",
+    "        print(\"Hello World!\")\n",
+    "\n",
+    "my_instance = my_class()\n",
+    "\n",
+    "try:\n",
+    "    my_instance.my_method()\n",
+    "except Exception as e:\n",
+    "    print(e)\n",
+    "\n",
+    "try:\n",
+    "    my_instance.MyMethod()\n",
+    "except Exception as e:\n",
+    "    print(e)"
    ]
   }
  ],
