--- a/class.ipynb
+++ b/class.ipynb
@@ -298,7 +298,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "例として、キャメルケースでメソッド名を定義してもスネークケースに直してくれるメタクラスを定義してみる。"
+    "例として、キャメルケースでメソッド名を定義してもスネークケースに直してからクラスを定義してくれるメタクラスを作ってみる。"
    ]
   },
   {
@@ -321,7 +321,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "これでクラスを定義してみると"
+    "これでクラスを定義してみる。"
    ]
   },
   {
@@ -411,16 +411,16 @@
      "output_type": "stream",
      "text": [
       "Hello World!\n",
-      "'my_class' object has no attribute 'MyMethod'\n"
+      "'MyClass' object has no attribute 'MyMethod'\n"
      ]
     }
    ],
    "source": [
-    "class my_class(metaclass=MyMeta):\n",
+    "class MyClass(metaclass=MyMeta):\n",
     "    def MyMethod(self):\n",
     "        print(\"Hello World!\")\n",
     "\n",
-    "my_instance = my_class()\n",
+    "my_instance = MyClass()\n",
     "\n",
     "try:\n",
     "    my_instance.my_method()\n",
