--- a/class.ipynb
+++ b/class.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# class\n",
     "\n",
-    "Pythonの型について学ぼう。"
+    "Pythonの型やclassについて学ぼう。"
    ]
   },
   {
@@ -132,7 +132,7 @@
     "\n",
     "のよう。\n",
     "\n",
-    "型の型はどうなっているかというと、"
+    "では型の型はどうなっているかというと、"
    ]
   },
   {
@@ -245,7 +245,7 @@
     }
    ],
    "source": [
-    "__name__"
+    "__name__ # モジュール名"
    ]
   },
   {
@@ -254,7 +254,7 @@
    "source": [
     "`type`を使ってクラスを定義することもできる。\n",
     "\n",
-    "`type(\"class_name\", (object,), {\"method_name\": method})`とすると、`object`を継承した`class_name`という名前のクラスが定義される。"
+    "`type(\"class_name\", (object,), {\"method_name\": method})`とすると、`method_name`を持つ`object`を継承した`class_name`というクラスが定義される。"
    ]
   },
   {
@@ -396,9 +396,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "と、入力した`MyMethod`のままになる。\n",
+    "と`MyMethod`のままになる。\n",
     "\n",
-    "`class Name(object):`の形でクラスを定義する際に任意のメタクラスを指定する場合は、`class Name(object, metaclass=Meta):`とする。"
+    "`class Name(object):`の形でクラスを定義する際に任意のメタクラス`Meta`を指定する場合は、`class Name(object, metaclass=Meta):`とする。"
    ]
   },
   {
@@ -431,6 +431,139 @@
     "    my_instance.MyMethod()\n",
     "except Exception as e:\n",
     "    print(e)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 抽象基底クラス\n",
+    "\n",
+    "*Abstract Base Class, ABC*\n",
+    "\n",
+    "継承した際に特定のメソッドの実装を強制するクラス。そのメソッドは抽象メソッドと呼ぶ。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`abc`モジュールを使う。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from abc import ABCMeta, abstractmethod"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`abc.ABCMeta`をメタクラスとし、抽象メソッドにはデコレータで`abc.abstractmethod`を指定する。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class MyABC(metaclass=ABCMeta):\n",
+    "    @abstractmethod\n",
+    "    def my_method(self):\n",
+    "        pass"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "これを継承するときは、`my_method`を実装しないとエラーになる。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Can't instantiate abstract class MyClass with abstract method my_method\n"
+     ]
+    }
+   ],
+   "source": [
+    "class MyClass(MyABC):\n",
+    "    pass\n",
+    "\n",
+    "try:\n",
+    "    MyClass()\n",
+    "except Exception as e:\n",
+    "    print(e)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "実装すれば普通に動く。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class MyClass(MyABC):\n",
+    "    def my_method(self):\n",
+    "        print(\"Hello World!\")\n",
+    "\n",
+    "try:\n",
+    "    MyClass()\n",
+    "except Exception as e:\n",
+    "    print(e)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "ちなみに、抽象基底クラスはインスタンス化できない。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Can't instantiate abstract class MyABC with abstract method my_method\n"
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "    my_abc = MyABC()\n",
+    "except Exception as e:\n",
+    "    print(e)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "抽象基底クラスは実装に制限をかけるもので、特殊な機能があるわけではない。コードの保守性を高めたい場合などに使う。"
    ]
   }
  ],
