--- a/class.ipynb
+++ b/class.ipynb
@@ -271,9 +271,9 @@
     }
    ],
    "source": [
-    "MyClass = type(\"MyClass\", (), {\"__call__\": lambda self: print(\"Hello World!\")})\n",
+    "MyClass = type(\"MyClass\", (), {\"hello\": lambda self: print(\"Hello World!\")})\n",
     "my_instance = MyClass()\n",
-    "my_instance()"
+    "my_instance.hello()"
    ]
   },
   {
