--- a/module.ipynb
+++ b/module.ipynb
@@ -136,6 +136,106 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## `from`\n",
+    "\n",
+    "特定の変数や関数だけを使いたい場合は、`from`を使う。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 一旦削除\n",
+    "del mymodule1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# funcだけインポート\n",
+    "from mymodule1 import func"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "world\n"
+     ]
+    }
+   ],
+   "source": [
+    "func()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`func`だけインポート出来た。こうしてインポートした場合はモジュール名を書く必要がない。むしろ書くとエラーになる。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "name 'mymodule1' is not defined\n"
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "    mymodule1.func()\n",
+    "except Exception as e:\n",
+    "    print(e)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "当然、他の変数などにはアクセスできない。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "name 'var' is not defined\n"
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "    print(var)\n",
+    "except Exception as e:\n",
+    "    print(e)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
