--- a/module.ipynb
+++ b/module.ipynb
@@ -236,11 +236,38 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "`*`を使うとモジュール内の全ての機能をインポートできる。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "world\n"
+     ]
+    }
+   ],
+   "source": [
+    "from mymodule1 import *\n",
+    "print(var)\n",
+    "func()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "ただ、どの機能がインポートされているかが分かり辛くなるので使わない方がいい。"
+   ]
   }
  ],
  "metadata": {
