--- a/module.ipynb
+++ b/module.ipynb
@@ -132,13 +132,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "使うことが出来た。"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## `from`\n",
     "\n",
     "特定の変数や関数だけを使いたい場合は、`from`を使う。"
@@ -266,7 +259,38 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "ただ、どの機能がインポートされているかが分かり辛くなるので使わない方がいい。"
+    "ただ名前空間がごちゃごちゃするのであんま使わない方がいい。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## `as`\n",
+    "\n",
+    "`as`を使うと任意の名前でモジュールや機能をインポートすることができる。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "world\n",
+      "world\n"
+     ]
+    }
+   ],
+   "source": [
+    "import mymodule1 as mm1\n",
+    "mm1.func()\n",
+    "\n",
+    "from mymodule1 import func as myfunc\n",
+    "myfunc()"
    ]
   }
  ],
