--- a/module.ipynb
+++ b/module.ipynb
@@ -125,7 +125,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "__pycache__  mymodule2.py\n"
+      "mymodule2.py\n"
      ]
     }
    ],
@@ -520,7 +520,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "mymodule1.py  random.py\n"
+      "mymodule1.py\n"
      ]
     }
    ],
@@ -723,6 +723,286 @@
     "\n",
     "# もう一個のrandomモジュールの方が優先度が高いのでそちらが使われる\n",
     "random.__file__"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "IPython Notebookのコードセルではなく、pythonコマンドでモジュールを実行する場合の`sys.path`も見てみよう。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "code = r\"\"\"\n",
+    "import sys\n",
+    "print('\\n'.join(sys.path))\n",
+    "print(\"__file__:\", __file__)\n",
+    "\"\"\"\n",
+    "with open(\"mymodule3.py\", \"w\") as f:\n",
+    "    f.write(code)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/komiya/works/python-memo\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pwd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/komiya/works/python-memo\n",
+      "/home/komiya/.miniforge3/envs/basic/lib/python310.zip\n",
+      "/home/komiya/.miniforge3/envs/basic/lib/python3.10\n",
+      "/home/komiya/.miniforge3/envs/basic/lib/python3.10/lib-dynload\n",
+      "/home/komiya/.miniforge3/envs/basic/lib/python3.10/site-packages\n",
+      "__file__: /home/komiya/works/python-memo/mymodule3.py\n"
+     ]
+    }
+   ],
+   "source": [
+    "!python mymodule3.py"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "カレントディレクトリにpathが通っている。では、別のディレクトリにあるモジュールを実行した場合は？"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "code = r\"\"\"\n",
+    "import sys\n",
+    "print('\\n'.join(sys.path))\n",
+    "print(\"__file__:\", __file__)\n",
+    "\"\"\"\n",
+    "with open(\"modules/mymodule4.py\", \"w\") as f:\n",
+    "    f.write(code)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/komiya/works/python-memo/modules\n",
+      "/home/komiya/.miniforge3/envs/basic/lib/python310.zip\n",
+      "/home/komiya/.miniforge3/envs/basic/lib/python3.10\n",
+      "/home/komiya/.miniforge3/envs/basic/lib/python3.10/lib-dynload\n",
+      "/home/komiya/.miniforge3/envs/basic/lib/python3.10/site-packages\n",
+      "__file__: /home/komiya/works/python-memo/modules/mymodule4.py\n"
+     ]
+    }
+   ],
+   "source": [
+    "!python modules/mymodule4.py"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "カレントディレクトリではなく、実行したモジュールの親ディレクトリにpathが通っている。どうやらこの解釈が正しいようだ。カレントディレクトリではなく、実行したモジュールの親ディレクトリにpathが通る。そのままインポートできるのは、カレントディレクトリにあるモジュールではなく、実行したモジュールと同じ場所にあるモジュールとなる。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mymodule1.py  mymodule3.py  random.py\n",
+      "modules/mymodule2.py  modules/mymodule4.py\n"
+     ]
+    }
+   ],
+   "source": [
+    "!ls *.py\n",
+    "!ls modules/*.py"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "code = \"\"\"\n",
+    "print(\"__file__:\", __file__)\n",
+    "try:\n",
+    "    import mymodule1 # できない\n",
+    "except Exception as e:\n",
+    "    print(e)\n",
+    "\n",
+    "try:\n",
+    "    import mymodule2 # できる\n",
+    "except Exception as e:\n",
+    "    print(e)\n",
+    "\"\"\"\n",
+    "with open(\"modules/mymodule5.py\", \"w\") as f:\n",
+    "    f.write(code)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "__file__: /home/komiya/works/python-memo/modules/mymodule5.py\n",
+      "No module named 'mymodule1'\n",
+      "this is mymodule2\n"
+     ]
+    }
+   ],
+   "source": [
+    "!python modules/mymodule5.py"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`mymodule1.py`は`mymodule5.py`よりも一つ上の階層にあるのでインポートできない（見つけられない）。\n",
+    "\n",
+    "なお、ファイルパスはカレントディレクトリが基準になるので注意。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "code = \"\"\"\n",
+    "print(\"__file__:\", __file__)\n",
+    "from pathlib import Path\n",
+    "print('カレントディレクトリ:', Path.cwd())\n",
+    "\n",
+    "print(Path('mymodule1.py').exists())\n",
+    "print(Path('mymodule2.py').exists())\n",
+    "print(Path('modules/mymodule2.py').exists())\n",
+    "\"\"\"\n",
+    "with open(\"modules/mymodule6.py\", \"w\") as f:\n",
+    "    f.write(code)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "__file__: /home/komiya/works/python-memo/modules/mymodule6.py\n",
+      "カレントディレクトリ: /home/komiya/works/python-memo\n",
+      "True\n",
+      "False\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "!python modules/mymodule6.py"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "ここでクイズ。\n",
+    "\n",
+    "`./modules/`にあるモジュールから`./`にあるモジュールをインポートする為には`sys.path.append()`で何を追加すればよいか。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "正解は、"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "code = \"\"\"\n",
+    "print(\"__file__:\", __file__)\n",
+    "import sys\n",
+    "sys.path.append('./')\n",
+    "import mymodule1 # できる\n",
+    "import mymodule2 # できる\n",
+    "\"\"\"\n",
+    "with open(\"modules/mymodule7.py\", \"w\") as f:\n",
+    "    f.write(code)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "__file__: /home/komiya/works/python-memo/modules/mymodule7.py\n",
+      "this is mymodule1\n",
+      "this is mymodule2\n"
+     ]
+    }
+   ],
+   "source": [
+    "!python modules/mymodule7.py"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "普通に`'./'`でした。`'.'`や`''`でもいい。`../`はダメ。パスはカレントディレクトリが基準なので、そこにパスを通したければ、カレントディレクトリを表す`./`を追加する。"
    ]
   }
  ],
