しゅうせい

--- a/module.ipynb
+++ b/module.ipynb
@@ -125,7 +125,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "mymodule2.py\n"
+      "__pycache__   mymodule4.py  mymodule6.py\n",
+      "mymodule2.py  mymodule5.py  mymodule7.py\n"
      ]
     }
    ],
@@ -520,7 +521,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "mymodule1.py\n"
+      "mymodule1.py  mymodule3.py  random.py\n"
      ]
     }
    ],
@@ -721,7 +722,7 @@
     "del random\n",
     "import random\n",
     "\n",
-    "# もう一個のrandomモジュールの方が優先度が高いのでそちらが使われる\n",
+    "# 標準のrandomモジュールの方が優先度が高いのでそちらが使われる\n",
     "random.__file__"
    ]
   },
@@ -847,7 +848,8 @@
      "output_type": "stream",
      "text": [
       "mymodule1.py  mymodule3.py  random.py\n",
-      "modules/mymodule2.py  modules/mymodule4.py\n"
+      "modules/mymodule2.py  modules/mymodule5.py  modules/mymodule7.py\n",
+      "modules/mymodule4.py  modules/mymodule6.py\n"
      ]
     }
    ],
@@ -903,12 +905,41 @@
    "source": [
     "`mymodule1.py`は`mymodule5.py`よりも一つ上の階層にあるのでインポートできない（見つけられない）。\n",
     "\n",
-    "なお、ファイルパスはカレントディレクトリが基準になるので注意。"
+    "ちなみに、`-m`オプションをつけるとカレントディレクトリにpathが通る。実行するモジュールをpythonスクリプトと同じような感じで指定する。"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/komiya/works/python-memo\n",
+      "/home/komiya/.miniforge3/envs/basic/lib/python310.zip\n",
+      "/home/komiya/.miniforge3/envs/basic/lib/python3.10\n",
+      "/home/komiya/.miniforge3/envs/basic/lib/python3.10/lib-dynload\n",
+      "/home/komiya/.miniforge3/envs/basic/lib/python3.10/site-packages\n",
+      "__file__: /home/komiya/works/python-memo/modules/mymodule4.py\n"
+     ]
+    }
+   ],
+   "source": [
+    "!python -m modules.mymodule4"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "また、ファイルパスはカレントディレクトリが基準になるので注意。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -927,7 +958,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -964,7 +995,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -981,7 +1012,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -1002,7 +1033,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "普通に`'./'`でした。`'.'`や`''`でもいい。`../`はダメ。パスはカレントディレクトリが基準なので、そこにパスを通したければ、カレントディレクトリを表す`./`を追加する。"
+    "普通に`'./'`でした。`'.'`や`''`でもいい。`'../'`はダメ。パスはカレントディレクトリが基準なので、そこにパスを通したければ、カレントディレクトリを表す`'./'`を追加する。"
    ]
   }
  ],
